--- a/paginas/style.css
+++ b/paginas/style.css
@@ -46,6 +46,22 @@
         justify-content: space-evenly;
         align-items: center;
      }
+
+     .header__menu li{
+        transition: transform 1s, background 2s;
+    }
+    .header__menu li:hover{
+        transform: scale(1.1);
+    }
+
+    .header__menu li .hover:hover{
+       background-color: #fa0101;
+       padding: 10px;
+       border-radius: 3px;
+       transition: transform 1s, background 2s;
+       transform: scale(1.1);
+       
+    }
      
      .inicio{
         background-image: url(../imagenes/inicio3.jpg);
@@ -321,6 +337,7 @@
         background-color: grey;
         padding: 10px;
         border-radius: 5px;
+        transform: scale(1.1);
     }
     .clasesBg{
         background-color: #D6DAD8;
@@ -533,6 +550,7 @@
         justify-content: center;
         flex-wrap: wrap;
         align-items: center; 
+        transition: 1s;
         }
     .iconitos{
         width: 60px;
