--- a/paginas/style.css
+++ b/paginas/style.css
@@ -93,6 +93,11 @@
         color: white;
         margin-top: 20px;
      }
+
+     .boton__inicio:hover{
+        transform: scale(1.5);
+        transition: transform 2s;
+     }
      
      .footer{
         background-color: black;
