tuki listo para mergear

--- a/paginas/style.css
+++ b/paginas/style.css
@@ -94,8 +94,8 @@
         margin-top: 20px;
      }
 
-     .boton__inicio:hover{
-        transform: scale(1.5);
+     .boton_inicio:hover{
+        transform: scale(1.1);
         transition: transform 2s;
      }
      
