--- a/paginas/style.css
+++ b/paginas/style.css
@@ -109,6 +109,24 @@ a{
     color: white;
 }
 
+.carousel-item > div {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .hero-headline{
+      color: white;
+      margin-bottom: 30px;
+      text-transform: uppercase;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  }
+
+  .hero-subhead{
+      text-transform: uppercase;
+        font-size: 16px;
+  }
 
 
 @media only screen and (max-width: 768px) {
