--- a/paginas/style.css
+++ b/paginas/style.css
@@ -502,7 +502,12 @@ ul {
     transition: 1.3s;
     transition: background-color transform  1.5s;}
 
-    
+    .boxeo{
+        height: 300px;
+        background-image: url(../imagenes/boxeo.jpg);
+        background-size: 450px;
+        background-position: center;
+    }
     
 
     .crossfit{
@@ -662,6 +667,7 @@ ul {
     
         .boxeo{
             height: 300px;
+            background-image: url(../imagenes/boxeo.jpg);
             background-size: 450px;
             background-position: center;
            
