--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,6 @@
 @import "./base/_general.scss";
 @import "./_index.scss";
 @import  "./componentes/_precios.scss";
+@import "./componentes/_actividades.scss";
+@import "./componentes/_galeria.scss";
+@import "./componentes/_contacto.scss";
