--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,61 @@
+main .centrar__h1, main .inicio2 {
+  display: flex;
+  justify-content: center; }
+
+.inicio .centrar__h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
+main .centrar__h1, main .inicio2 {
+  display: flex;
+  justify-content: center; }
+
+.inicio .centrar__h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
 * {
   padding: 0;
   margin: 0;
@@ -62,7 +120,7 @@
         margin-bottom: 25px;
         font-size: 20px; }
       .pie-pagina .grupo-1 .box p {
-        color: white;
+        color: red;
         margin-bottom: 10px; }
     .pie-pagina .grupo-1 .red-social a {
       display: inline-block;
@@ -97,6 +155,35 @@
 .fa-solid {
   color: red; }
 
+main .centrar__h1, main .inicio2 {
+  display: flex;
+  justify-content: center; }
+
+.inicio .centrar__h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
 .inicio .carousel-inner {
   height: 100vh; }
   .inicio .carousel-inner .carousel-item {
@@ -106,7 +193,8 @@
     width: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center; }
+    justify-content: center;
+    align-items: center; }
     .inicio .carousel-inner .carousel-item > div .hero-headline {
       color: white;
       margin-bottom: 30px;
@@ -121,17 +209,44 @@
         background-color: red;
         padding: 10px; }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 780px) {
   .inicio .carousel-inner .carousel-item {
     background-size: cover;
     background-position: center; } }
+
+main .centrar__h1, main .inicio2 {
+  display: flex;
+  justify-content: center; }
+
+.inicio .centrar__h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
 
 main .bodyBg {
   background-color: #222222fd; }
 
 main .centrar__h1 {
-  display: flex;
-  justify-content: center;
   color: white;
   text-transform: uppercase;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -141,32 +256,387 @@ main .centrar__h1 {
   main .centrar__h1 h1 {
     font-size: 60px; }
 
-main .inicio2 {
+main .inicio2 .row {
+  width: 800px; }
+  main .inicio2 .row .col-sm-6 .card {
+    margin: 30px;
+    background-color: #e6e6e6;
+    text-align: center;
+    box-shadow: 6px 6px 5px 0px rgba(84, 84, 84, 0.75);
+    -webkit-box-shadow: 6px 6px 5px 0px rgba(84, 84, 84, 0.75);
+    -moz-box-shadow: 6px 6px 5px 0px rgba(84, 84, 84, 0.75); }
+    main .inicio2 .row .col-sm-6 .card .card-body ul {
+      padding: 0; }
+    main .inicio2 .row .col-sm-6 .card .card-body .card-title {
+      font-size: 30px; }
+    main .inicio2 .row .col-sm-6 .card .card-body .precio {
+      background-color: red;
+      padding: 15px;
+      border-radius: 4px;
+      color: white; }
+    main .inicio2 .row .col-sm-6 .card .card-body .lista {
+      list-style: none; }
+  main .inicio2 .row .col-sm-6 .card2 {
+    background-color: #0a0909;
+    color: white; }
+  main .inicio2 .row .col-sm-6 .card:hover {
+    transform: scale(1.06);
+    transition: transform 1s; }
+
+@media only screen and (max-width: 780px) {
+  main .bodyBg {
+    background-color: #222222fd; }
+  main .inicio2 .row {
+    width: 320px; }
+    main .inicio2 .row .col-sm-6 {
+      width: 320px;
+      padding-right: 0; }
+      main .inicio2 .row .col-sm-6 .card {
+        padding-right: 0; } }
+
+main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-  main .inicio2 .row {
-    width: 800px; }
-    main .inicio2 .row .col-sm-6 .card {
-      margin: 30px;
-      background-color: #e6e6e6;
-      text-align: center;
-      box-shadow: 6px 6px 5px 0px rgba(84, 84, 84, 0.75);
-      -webkit-box-shadow: 6px 6px 5px 0px rgba(84, 84, 84, 0.75);
-      -moz-box-shadow: 6px 6px 5px 0px rgba(84, 84, 84, 0.75); }
-      main .inicio2 .row .col-sm-6 .card .card-body ul {
-        padding: 0; }
-      main .inicio2 .row .col-sm-6 .card .card-body .card-title {
-        font-size: 30px; }
-      main .inicio2 .row .col-sm-6 .card .card-body .precio {
-        background-color: red;
-        padding: 15px;
-        border-radius: 4px;
-        color: white; }
-      main .inicio2 .row .col-sm-6 .card .card-body .lista {
-        list-style: none; }
-    main .inicio2 .row .col-sm-6 .card2 {
-      background-color: #0a0909;
+
+.inicio .centrar__h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
+.inicio .centrar__h1 h1 {
+  font-size: 60px; }
+
+.inicio .actividades {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding-bottom: 30px; }
+  .inicio .actividades .tarjetas {
+    width: 400px;
+    height: 300px;
+    border-radius: 10px; }
+    .inicio .actividades .tarjetas .contenido {
+      opacity: 0;
+      width: 400px;
+      height: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px; }
+    .inicio .actividades .tarjetas .contenido:hover {
+      opacity: 1;
+      background-color: rgba(255, 0, 0, 0.47);
+      color: white;
+      text-transform: uppercase;
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+      font-size: 32px;
+      transition: 1.3s;
+      transition: background-color 1.5s; }
+    .inicio .actividades .tarjetas a {
+      text-decoration: none; }
+  .inicio .actividades .boxeo {
+    height: 300px;
+    background-image: url(../../imagenes/boxeo.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .crossfit {
+    height: 300px;
+    background-image: url(../../imagenes/crossfit.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .spinning {
+    height: 300px;
+    background-image: url(../../imagenes/spinning.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .zumba {
+    height: 300px;
+    background-image: url(../../imagenes/zumba.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .gimnasio {
+    height: 300px;
+    background-image: url(../../imagenes/gym.jpeg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .football {
+    height: 300px;
+    background-image: url(../../imagenes/football.jpeg);
+    background-size: 450px;
+    background-position: center; }
+
+@media only screen and (max-width: 780px) {
+  .inicio .centrar__h1 h1 {
+    font-size: 50px; }
+  .inicio .actividades .tarjetas {
+    width: 300px;
+    height: 300px; }
+    .inicio .actividades .tarjetas .contenido {
+      width: 300px;
+      height: 300px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      opacity: 1;
+      background-color: rgba(255, 0, 0, 0.47);
+      color: white;
+      text-transform: uppercase;
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+      font-size: 32px;
+      transition: 1.3s;
+      transition: background-color 1.5s; }
+  .inicio .actividades .boxeo {
+    height: 300px;
+    background-image: url(../../imagenes/boxeo.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .crossfit {
+    height: 300px;
+    background-image: url(../../imagenes/crossfit.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .spinning {
+    height: 300px;
+    background-image: url(../../imagenes/spinning.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .zumba {
+    height: 300px;
+    background-image: url(../../imagenes/zumba.jpg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .gimnasio {
+    height: 300px;
+    background-image: url(../../imagenes/gym.jpeg);
+    background-size: 450px;
+    background-position: center; }
+  .inicio .actividades .football {
+    height: 300px;
+    background-image: url(../../imagenes/football.jpeg);
+    background-size: 450px;
+    background-position: center; } }
+
+main .centrar__h1, main .inicio2 {
+  display: flex;
+  justify-content: center; }
+
+.inicio .centrar__h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
+.inicio .actividades1 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr) repeat(2, 0);
+  grid-template-rows: repeat(2, 1fr) repeat(2, 0);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  gap: 12px;
+  margin-left: 20px; }
+  .inicio .actividades1 .boxeo1 {
+    grid-area: 1 / 1 / 2 / 2;
+    background-color: black;
+    color: white; }
+  .inicio .actividades1 .crossfit1 {
+    grid-area: 1 / 2 / 2 / 3;
+    background-color: red;
+    color: white; }
+    .inicio .actividades1 .crossfit1 h3 {
       color: white; }
-    main .inicio2 .row .col-sm-6 .card:hover {
-      transform: scale(1.06);
-      transition: transform 1s; }
+    .inicio .actividades1 .crossfit1 .fa-solid {
+      color: white; }
+    .inicio .actividades1 .crossfit1 .contenido1 {
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+      font-size: 40px;
+      color: white; }
+  .inicio .actividades1 .spinning1 {
+    grid-area: 1 / 3 / 2 / 4;
+    background-color: black;
+    color: white; }
+    .inicio .actividades1 .spinning1 .contenido1 {
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+      font-size: 40px;
+      color: red; }
+  .inicio .actividades1 .zumba1 {
+    grid-area: 2 / 1 / 3 / 2;
+    color: white;
+    background-color: red; }
+    .inicio .actividades1 .zumba1 h3 {
+      color: white; }
+    .inicio .actividades1 .zumba1 .fa-solid {
+      color: white; }
+    .inicio .actividades1 .zumba1 .contenido1 {
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+      font-size: 40px;
+      color: white; }
+  .inicio .actividades1 .gimnasio1 {
+    grid-area: 2 / 2 / 3 / 3;
+    background-color: black;
+    color: white; }
+  .inicio .actividades1 .football1 {
+    grid-area: 2 / 3 / 3 / 4;
+    background-color: red;
+    color: white; }
+    .inicio .actividades1 .football1 h3 {
+      color: white; }
+    .inicio .actividades1 .football1 .fa-solid {
+      color: white; }
+    .inicio .actividades1 .football1 .contenido1 {
+      font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+      font-size: 40px;
+      color: white; }
+
+@media only screen and (max-width: 780px) {
+  .inicio .actividades1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 10px;
+    margin: 20px; }
+    .inicio .actividades1 .boxeo1 {
+      grid-area: 1 / 1 / 2 / 2; }
+    .inicio .actividades1 .crossfit1 {
+      grid-area: 2 / 1 / 3 / 2; }
+    .inicio .actividades1 .spinning1 {
+      grid-area: 3 / 1 / 4 / 2; }
+    .inicio .actividades1 .zumba1 {
+      grid-area: 4 / 1 / 5 / 2; }
+    .inicio .actividades1 .gimnasio1 {
+      grid-area: 5 / 1 / 6 / 2; }
+    .inicio .actividades1 .football1 {
+      grid-area: 6 / 1 / 7 / 2; } }
+
+main .centrar__h1, main .inicio2 {
+  display: flex;
+  justify-content: center; }
+
+.inicio .centrar__h1 {
+  display: flex;
+  justify-content: center;
+  color: white;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-style: italic;
+  margin-top: 20px;
+  text-align: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
+.content .contact-wrapper {
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+  margin: 50px;
+  color: white;
+  font-family: 'Quicksand', sans-serif; }
+  .content .contact-wrapper .contact-wrapper > * {
+    padding: 1em; }
+  .content .contact-wrapper .contact-form {
+    background: #222222; }
+    .content .contact-wrapper .contact-form h5 {
+      text-align: center;
+      padding: 20px; }
+    .content .contact-wrapper .contact-form form {
+      display: grid;
+      grid-template-columns: 1fr 1fr; }
+      .content .contact-wrapper .contact-form form label {
+        display: block; }
+      .content .contact-wrapper .contact-form form p {
+        margin: 0;
+        padding: 1em; }
+      .content .contact-wrapper .contact-form form .block {
+        grid-column: 1 / 3; }
+      .content .contact-wrapper .contact-form form button, .content .contact-wrapper .contact-form form input, .content .contact-wrapper .contact-form form textarea {
+        width: 100%;
+        padding: .7em;
+        border: none;
+        background: none;
+        outline: 0;
+        color: #fff;
+        border-bottom: 1px solid #d63031; }
+      .content .contact-wrapper .contact-form form button {
+        background: #B70E21;
+        border: 0;
+        text-transform: uppercase;
+        padding: 1em; }
+        .content .contact-wrapper .contact-form form button:hover {
+          background: #d63031;
+          color: #fff;
+          transition: background-color 1s ease-out;
+          outline: 0; }
+        .content .contact-wrapper .contact-form form button:focus {
+          background: #d63031;
+          color: #fff;
+          transition: background-color 1s ease-out;
+          outline: 0; }
+
+@media only screen and (max-width: 780px) {
+  main .centrar__h1 h1 {
+    font-size: 50px; }
+  main .content .contact-wrapper {
+    box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+    margin: 20px; }
+    main .content .contact-wrapper .contact-form form {
+      display: grid;
+      grid-template-columns: 1fr; }
+      main .content .contact-wrapper .contact-form form label {
+        display: block; }
+      main .content .contact-wrapper .contact-form form p {
+        margin: 0;
+        padding: 1em; }
+      main .content .contact-wrapper .contact-form form .block {
+        grid-column: 1; } }
