--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,87 @@
-$color-principal: red;
-$color-secundario: black;
+
 $fuente-principal: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-$color-texto: white;
-$color-fondo:  #222222fd;
+// MAP
+$colores: (
+"principal": red,
+"secundario": black,
+"texto": white,
+"fondo": #222222fd,
+);
+
+// MIXIN
+@mixin mediaQuery ($pantalla){
+
+    @if $pantalla == "mobile"{
+
+        @media only screen and (max-width: 500px ){
+            @content
+        }
+    };
+
+    @if $pantalla == "tablet" {
+        @media only screen and (max-width: 780px ){
+            @content
+        }
+    };
+
+    @if $pantalla == "desktop" {
+        @media only screen and (max-width: 1024px ){
+            @content
+        }
+    };
+}
+
+@mixin flexbox ($direction, $justify, $align,){
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+    align-items: $align;
+}
+
+@mixin clases ($img){
+    height: 300px;
+    background-image: $img;
+    background-size: 450px;
+    background-position: center;
+}
+
+@mixin contenido ($color){
+    font-family: $fuente-principal;
+    font-size: 40px;
+    color: $color;
+}
+
+// EXTEND
+
+%flex{
+    display: flex;
+    justify-content: center;
+};
+
+%titulo{
+    display: flex;
+    justify-content: center;
+    color: map-get($map: $colores, $key: "texto" );
+    text-transform: uppercase;
+    font-family: $fuente-principal; 
+    font-style: italic;
+    margin-top: 20px;
+    text-align: center;
+};
+
+%contenido1{
+    font-family: $fuente-principal;
+    font-size: 40px;
+    color: map-get($map: $colores, $key:"principal" );
+}
+
+%actividades{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
