--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ main .centrar__h1, main .inicio2 {
         margin-bottom: 25px;
         font-size: 20px; }
       .pie-pagina .grupo-1 .box p {
-        color: red;
+        color: white;
         margin-bottom: 10px; }
     .pie-pagina .grupo-1 .red-social a {
       display: inline-block;
