--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
+  height: 300px;
+  background-size: 450px;
+  background-position: center; }
+
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
@@ -26,6 +31,11 @@ main .centrar__h1, main .inicio2 {
   text-align: center;
   font-size: 20px;
   text-transform: uppercase; }
+
+.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
+  height: 300px;
+  background-size: 450px;
+  background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
@@ -155,6 +165,11 @@ main .centrar__h1, main .inicio2 {
 .fa-solid {
   color: red; }
 
+.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
+  height: 300px;
+  background-size: 450px;
+  background-position: center; }
+
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
@@ -213,6 +228,11 @@ main .centrar__h1, main .inicio2 {
   .inicio .carousel-inner .carousel-item {
     background-size: cover;
     background-position: center; } }
+
+.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
+  height: 300px;
+  background-size: 450px;
+  background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
@@ -294,6 +314,11 @@ main .inicio2 .row {
       main .inicio2 .row .col-sm-6 .card {
         padding-right: 0; } }
 
+.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
+  height: 300px;
+  background-size: 450px;
+  background-position: center; }
+
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
@@ -356,35 +381,17 @@ main .centrar__h1, main .inicio2 {
     .inicio .actividades .tarjetas a {
       text-decoration: none; }
   .inicio .actividades .boxeo {
-    height: 300px;
-    background-image: url(../../imagenes/boxeo.jpg);
-    background-size: 450px;
-    background-position: center; }
+    background-image: url(../../imagenes/boxeo.jpg); }
   .inicio .actividades .crossfit {
-    height: 300px;
-    background-image: url(../../imagenes/crossfit.jpg);
-    background-size: 450px;
-    background-position: center; }
+    background-image: url(../../imagenes/crossfit.jpg); }
   .inicio .actividades .spinning {
-    height: 300px;
-    background-image: url(../../imagenes/spinning.jpg);
-    background-size: 450px;
-    background-position: center; }
+    background-image: url(../../imagenes/spinning.jpg); }
   .inicio .actividades .zumba {
-    height: 300px;
-    background-image: url(../../imagenes/zumba.jpg);
-    background-size: 450px;
-    background-position: center; }
+    background-image: url(../../imagenes/zumba.jpg); }
   .inicio .actividades .gimnasio {
-    height: 300px;
-    background-image: url(../../imagenes/gym.jpeg);
-    background-size: 450px;
-    background-position: center; }
+    background-image: url(../../imagenes/gym.jpeg); }
   .inicio .actividades .football {
-    height: 300px;
-    background-image: url(../../imagenes/football.jpeg);
-    background-size: 450px;
-    background-position: center; }
+    background-image: url(../../imagenes/football.jpeg); }
 
 @media only screen and (max-width: 780px) {
   .inicio .centrar__h1 h1 {
@@ -406,37 +413,12 @@ main .centrar__h1, main .inicio2 {
       font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
       font-size: 32px;
       transition: 1.3s;
-      transition: background-color 1.5s; }
-  .inicio .actividades .boxeo {
-    height: 300px;
-    background-image: url(../../imagenes/boxeo.jpg);
-    background-size: 450px;
-    background-position: center; }
-  .inicio .actividades .crossfit {
-    height: 300px;
-    background-image: url(../../imagenes/crossfit.jpg);
-    background-size: 450px;
-    background-position: center; }
-  .inicio .actividades .spinning {
-    height: 300px;
-    background-image: url(../../imagenes/spinning.jpg);
-    background-size: 450px;
-    background-position: center; }
-  .inicio .actividades .zumba {
-    height: 300px;
-    background-image: url(../../imagenes/zumba.jpg);
-    background-size: 450px;
-    background-position: center; }
-  .inicio .actividades .gimnasio {
-    height: 300px;
-    background-image: url(../../imagenes/gym.jpeg);
-    background-size: 450px;
-    background-position: center; }
-  .inicio .actividades .football {
-    height: 300px;
-    background-image: url(../../imagenes/football.jpeg);
-    background-size: 450px;
-    background-position: center; } }
+      transition: background-color 1.5s; } }
+
+.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
+  height: 300px;
+  background-size: 450px;
+  background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
@@ -548,6 +530,11 @@ main .centrar__h1, main .inicio2 {
       grid-area: 5 / 1 / 6 / 2; }
     .inicio .actividades1 .football1 {
       grid-area: 6 / 1 / 7 / 2; } }
+
+.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
+  height: 300px;
+  background-size: 450px;
+  background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
