--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,10 @@
-.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
-  height: 300px;
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   background-size: 450px;
   background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-
-.inicio .centrar__h1 {
-  display: flex;
-  justify-content: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-style: italic;
-  margin-top: 20px;
-  text-align: center; }
 
 .inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -32,24 +21,13 @@ main .centrar__h1, main .inicio2 {
   font-size: 20px;
   text-transform: uppercase; }
 
-.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
-  height: 300px;
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   background-size: 450px;
   background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-
-.inicio .centrar__h1 {
-  display: flex;
-  justify-content: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-style: italic;
-  margin-top: 20px;
-  text-align: center; }
 
 .inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -153,7 +131,16 @@ main .centrar__h1, main .inicio2 {
     .pie-pagina .grupo-2 small {
       font-size: 15px; }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 780px) {
+  .pie-pagina .grupo-1 {
+    width: 90%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    padding: 35px 0px; }
+  .headerInicio .container-fluid .navbar-brand {
+    font-size: 20px; } }
+
+@media only screen and (max-width: 500px) {
   .pie-pagina .grupo-1 {
     width: 90%;
     grid-template-columns: repeat(1, 1fr);
@@ -165,24 +152,13 @@ main .centrar__h1, main .inicio2 {
 .fa-solid {
   color: red; }
 
-.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
-  height: 300px;
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   background-size: 450px;
   background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-
-.inicio .centrar__h1 {
-  display: flex;
-  justify-content: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-style: italic;
-  margin-top: 20px;
-  text-align: center; }
 
 .inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -229,24 +205,13 @@ main .centrar__h1, main .inicio2 {
     background-size: cover;
     background-position: center; } }
 
-.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
-  height: 300px;
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   background-size: 450px;
   background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-
-.inicio .centrar__h1 {
-  display: flex;
-  justify-content: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-style: italic;
-  margin-top: 20px;
-  text-align: center; }
 
 .inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -303,7 +268,33 @@ main .inicio2 .row {
     transform: scale(1.06);
     transition: transform 1s; }
 
+@media only screen and (min-width: 1024px) {
+  main .bodyBg {
+    background-color: #222222fd; }
+  main .inicio2 .row {
+    width: 550px;
+    flex-wrap: nowrap;
+    display: flex;
+    justify-content: center; }
+    main .inicio2 .row .col-sm-6 {
+      width: 550px;
+      padding: 0; }
+      main .inicio2 .row .col-sm-6 .card {
+        padding-right: 0; } }
+
 @media only screen and (max-width: 780px) {
+  main .bodyBg {
+    background-color: #222222fd; }
+  main .inicio2 .row {
+    width: 500px;
+    margin: auto; }
+    main .inicio2 .row .col-sm-6 {
+      width: 500px;
+      padding-right: 0; }
+      main .inicio2 .row .col-sm-6 .card {
+        padding-right: 0; } }
+
+@media only screen and (max-width: 500px) {
   main .bodyBg {
     background-color: #222222fd; }
   main .inicio2 .row {
@@ -314,24 +305,13 @@ main .inicio2 .row {
       main .inicio2 .row .col-sm-6 .card {
         padding-right: 0; } }
 
-.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
-  height: 300px;
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   background-size: 450px;
   background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-
-.inicio .centrar__h1 {
-  display: flex;
-  justify-content: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-style: italic;
-  margin-top: 20px;
-  text-align: center; }
 
 .inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -347,9 +327,6 @@ main .centrar__h1, main .inicio2 {
   text-align: center;
   font-size: 20px;
   text-transform: uppercase; }
-
-.inicio .centrar__h1 h1 {
-  font-size: 60px; }
 
 .inicio .actividades {
   display: flex;
@@ -369,7 +346,7 @@ main .centrar__h1, main .inicio2 {
       justify-content: center;
       align-items: center;
       border-radius: 10px; }
-    .inicio .actividades .tarjetas .contenido:hover {
+    .inicio .actividades .tarjetas:hover {
       opacity: 1;
       background-color: rgba(255, 0, 0, 0.47);
       color: white;
@@ -381,19 +358,69 @@ main .centrar__h1, main .inicio2 {
     .inicio .actividades .tarjetas a {
       text-decoration: none; }
   .inicio .actividades .boxeo {
-    background-image: url(../../imagenes/boxeo.jpg); }
+    background-image: url(../imagenes/bx.jpg);
+    height: 300px;
+    background-size: 450px;
+    background-position: center; }
   .inicio .actividades .crossfit {
-    background-image: url(../../imagenes/crossfit.jpg); }
+    background-image: url(../imagenes/crossfit.jpg);
+    height: 300px;
+    background-size: 450px;
+    background-position: center; }
   .inicio .actividades .spinning {
-    background-image: url(../../imagenes/spinning.jpg); }
+    background-image: url(../imagenes/spinning.jpg);
+    height: 300px;
+    background-size: 450px;
+    background-position: center; }
   .inicio .actividades .zumba {
-    background-image: url(../../imagenes/zumba.jpg); }
+    background-image: url(../imagenes/zumba.jpg);
+    height: 300px;
+    background-size: 450px;
+    background-position: center; }
   .inicio .actividades .gimnasio {
-    background-image: url(../../imagenes/gym.jpeg); }
+    background-image: url(../imagenes/gym.jpeg);
+    height: 300px;
+    background-size: 450px;
+    background-position: center; }
   .inicio .actividades .football {
-    background-image: url(../../imagenes/football.jpeg); }
+    background-image: url(../imagenes/football.jpeg);
+    height: 300px;
+    background-size: 450px;
+    background-position: center; }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (min-width: 1024px) {
+  .inicio .actividades {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding-bottom: 30px; }
+    .inicio .actividades .tarjetas {
+      width: 500px;
+      height: 350px;
+      border-radius: 10px;
+      background-position: center;
+      background-size: cover; }
+      .inicio .actividades .tarjetas .contenido {
+        opacity: 0;
+        width: 500px;
+        height: 350px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px; }
+        .inicio .actividades .tarjetas .contenido:hover {
+          opacity: 1;
+          background-color: rgba(255, 0, 0, 0.47);
+          color: white;
+          text-transform: uppercase;
+          font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+          font-size: 32px;
+          transition: 1.3s;
+          transition: background-color 1.5s;
+          width: 500px; } }
+
+@media only screen and (max-width: 500px) {
   .inicio .centrar__h1 h1 {
     font-size: 50px; }
   .inicio .actividades .tarjetas {
@@ -415,24 +442,13 @@ main .centrar__h1, main .inicio2 {
       transition: 1.3s;
       transition: background-color 1.5s; } }
 
-.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
-  height: 300px;
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   background-size: 450px;
   background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-
-.inicio .centrar__h1 {
-  display: flex;
-  justify-content: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-style: italic;
-  margin-top: 20px;
-  text-align: center; }
 
 .inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
@@ -510,7 +526,7 @@ main .centrar__h1, main .inicio2 {
       font-size: 40px;
       color: white; }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 500px) {
   .inicio .actividades1 {
     display: grid;
     grid-template-columns: 1fr;
@@ -531,24 +547,13 @@ main .centrar__h1, main .inicio2 {
     .inicio .actividades1 .football1 {
       grid-area: 6 / 1 / 7 / 2; } }
 
-.inicio .actividades .boxeo, .inicio .actividades .crossfit, .inicio .actividades .spinning, .inicio .actividades .zumba, .inicio .actividades .gimnasio, .inicio .actividades .football {
-  height: 300px;
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   background-size: 450px;
   background-position: center; }
 
 main .centrar__h1, main .inicio2 {
   display: flex;
   justify-content: center; }
-
-.inicio .centrar__h1 {
-  display: flex;
-  justify-content: center;
-  color: white;
-  text-transform: uppercase;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-style: italic;
-  margin-top: 20px;
-  text-align: center; }
 
 .inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
