--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -25,7 +25,7 @@ $colores: (
     };
 
     @if $pantalla == "desktop" {
-        @media only screen and (max-width: 1024px ){
+        @media only screen and (min-width: 1024px ){
             @content
         }
     };
@@ -38,17 +38,20 @@ $colores: (
     align-items: $align;
 }
 
-// @mixin clases ($img){
-//     height: 300px;
-//     // background-image: $img;
-//     background-size: 450px;
-//     background-position: center;
-// }
 
 @mixin contenido ($color){
     font-family: $fuente-principal;
     font-size: 40px;
     color: $color;
+}
+
+
+@mixin clases ($img) {
+    background-image: $img;
+    height: 300px;
+    background-size: 450px;
+    background-position: center;
+    
 }
 
 // EXTEND
@@ -58,6 +61,14 @@ $colores: (
     background-size: 450px;
     background-position: center;
 }
+
+%contenido1{
+    background-size: 450px;
+    background-position: center;
+}
+
+
+
 
 %flex{
     display: flex;
