--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,5 @@
 @import "./componentes/_actividades.scss";
 @import "./componentes/_galeria.scss";
 @import "./componentes/_contacto.scss";
+@import "./componentes/_404.scss";
 
