--- a/css/main.css
+++ b/css/main.css
@@ -632,3 +632,97 @@ main .centrar__h1, main .inicio2 {
         padding: 1em; }
       main .content .contact-wrapper .contact-form form .block {
         grid-column: 1; } }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  background-size: 450px;
+  background-position: center; }
+
+main .centrar__h1, main .inicio2 {
+  display: flex;
+  justify-content: center; }
+
+.inicio .actividades1 .boxeo1 .contenido1, .inicio .actividades1 .gimnasio1 .contenido1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 40px;
+  color: red; }
+
+.inicio .actividades1 .boxeo1, .inicio .actividades1 .crossfit1, .inicio .actividades1 .spinning1, .inicio .actividades1 .zumba1, .inicio .actividades1 .gimnasio1, .inicio .actividades1 .football1 {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
+.error {
+  height: 100vh; }
+  .error .contenedor {
+    width: 100%;
+    position: absolute;
+    top: 60%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: white;
+    font-size: 40px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .error .contenedor h1 {
+      font-size: 160px;
+      margin: 0;
+      font-weight: 900;
+      letter-spacing: 20px;
+      background: red;
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text; }
+    .error .contenedor a {
+      text-decoration: none;
+      background: red;
+      color: #fff;
+      padding: 12px 24px;
+      display: inline-block;
+      border-radius: 25px;
+      font-size: 14px;
+      text-transform: uppercase;
+      transition: 0.4s; }
+      .error .contenedor a:hover {
+        background: #e55039; }
+
+@media only screen and (max-width: 500px) {
+  .error {
+    height: 130vh; }
+    .error .contenedor {
+      width: 100%;
+      position: absolute;
+      top: 80%;
+      transform: translateY(-50%);
+      text-align: center;
+      color: white;
+      font-size: 40px;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .error .contenedor h1 {
+        font-size: 160px;
+        margin: 0;
+        font-weight: 900;
+        letter-spacing: 20px;
+        background: red;
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text; }
+      .error .contenedor a {
+        text-decoration: none;
+        background: red;
+        color: #fff;
+        padding: 12px 24px;
+        display: inline-block;
+        border-radius: 25px;
+        font-size: 14px;
+        text-transform: uppercase;
+        transition: 0.4s; }
+        .error .contenedor a:hover {
+          background: #e55039; } }
