--- a/scss/componentes/_404.scss
+++ b/scss/componentes/_404.scss
@@ -9,7 +9,7 @@
         text-align: center;
         color: white;
         font-size: 40px;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-family: $fuente-principal;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -22,7 +22,6 @@
             letter-spacing: 20px;
             background: map-get($map: $colores, $key: "principal");
             -webkit-text-fill-color: transparent;
-            -webkit-background-clip: text;
 
             
         }
@@ -69,7 +68,6 @@
                 letter-spacing: 20px;
                 background: map-get($map: $colores, $key: "principal");
                 -webkit-text-fill-color: transparent;
-                -webkit-background-clip: text;
     
                 
             }
